# fz

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-mcp.txt
a2a_workorders/: 2026-07-14_g4_ota_gate.md  2026-07-14_g5_full_smoke.md  2026-07-14_hil_to_gate_pipeline.md  2026-07-14_plan_status_docs.md  2026-07-14_r26_r27_ci_report_age.md  2026-07-14_r34_r35_log_triage.md  2026-07-14_r42_product_soft_divergence.md  2026-07-14_win_full_sim.md  RESULT_atom_review_r5.md  RESULT_combat_qwen3_2026-07-14.md  RESULT_combat_xiaozhi_u8_2026-07-14.md  RESULT_g4_ota_gate.md  RESULT_g5_full_smoke.md  RESULT_hil_to_gate_pipeline.md  RESULT_multi_source_research_r10.md  RESULT_opensource_sim_fusion.md  RESULT_plan_status_docs.md  RESULT_qemu_r9.md  RESULT_r11_deep_opt.md  RESULT_r13_json_steporacle.md  RESULT_r14_community_pc_sim.md  RESULT_r15_soft_status.md  RESULT_r19_golden_integrity.md  RESULT_r20_community_esp_sim_debunk.md  RESULT_r21_r22_shared_sim_ci.md  RESULT_r23_r24_golden_soft.md  RESULT_r25_must_agent_gate.md  RESULT_r26_r27_ci_report_age.md  RESULT_r28_r33_ci_case_schema.md  RESULT_r32_linux_sim_ci.md  RESULT_r34_r35_log_triage.md  RESULT_r36_hil_serial_log.md  RESULT_r37_pc_fail_expand.md  RESULT_r38_agent_observe.md  RESULT_r39_observe_v2.md  RESULT_r40_observe_v3.md  RESULT_r41_agent_surface.md  RESULT_r42_product_soft_divergence.md  RESULT_win_full_sim.md  TEMPLATE.md
chip_sim/: README.md  build_flash_image.py  install_qemu_windows.ps1  install_wokwi_windows.ps1  probe_chip_tools.py  qemu_panic_baseline.json  run_qemu_smoke.py  run_wokwi_smoke.py  startup_log_oracle.py  (+4 more)
(+212 files in other folders)
